{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 361,
  "lineage": "77cbee5f-d91c-2fd7-878e-c70e1ec68832",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:vpc/vpc-0977ca86c1e50d5c7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07d331857e626e57e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0220fad9fbb49c2c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0977ca86c1e50d5c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb5859aee40d043e",
            "owner_id": "285729811195",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:vpc/vpc-0977ca86c1e50d5c7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07d331857e626e57e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0220fad9fbb49c2c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0977ca86c1e50d5c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb5859aee40d043e",
            "owner_id": "285729811195",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05af08116418c2336",
            "arn": "arn:aws:ec2:us-east-1:285729811195:elastic-ip/eipalloc-05af08116418c2336",
            "domain": "vpc",
            "id": "eipalloc-05af08116418c2336",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-7-240-119.compute-1.amazonaws.com",
            "public_ip": "52.7.240.119",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:internet-gateway/igw-087066c4ce0526855",
            "id": "igw-087066c4ce0526855",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05af08116418c2336",
            "association_id": "eipassoc-0f637f3596867ff4f",
            "connectivity_type": "public",
            "id": "nat-0894fd9e17bce4070",
            "network_interface_id": "eni-076c571258c1b0a65",
            "private_ip": "10.0.1.100",
            "public_ip": "52.7.240.119",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7a0a66ec10de906",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-NAT-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-NAT-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bac1dcbdf541ce77440959817",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0bac1dcbdf541ce77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0843c2431eff9f03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_route_table.db_route",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bac1dcbdf541ce771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0894fd9e17bce4070",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0bac1dcbdf541ce77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NAT",
            "module.vpc.aws_route_table.db_route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0612b14cd98766b94440959817",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0612b14cd98766b94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0843c2431eff9f03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0612b14cd98766b941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0894fd9e17bce4070",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0612b14cd98766b94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NAT",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0082dab3faea00a44440959817",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0082dab3faea00a44",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0843c2431eff9f03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087066c4ce0526855",
            "id": "r-rtb-0082dab3faea00a441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0082dab3faea00a44",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb5859aee40d043e179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0bb5859aee40d043e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0843c2431eff9f03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.peering"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:route-table/rtb-0bac1dcbdf541ce77",
            "id": "rtb-0bac1dcbdf541ce77",
            "owner_id": "285729811195",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-db-route-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-db-route-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:route-table/rtb-0612b14cd98766b94",
            "id": "rtb-0612b14cd98766b94",
            "owner_id": "285729811195",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-private-route-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-private-route-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:route-table/rtb-0082dab3faea00a44",
            "id": "rtb-0082dab3faea00a44",
            "owner_id": "285729811195",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054db393cfaa7afd6",
            "region": "us-east-1",
            "route_table_id": "rtb-0bac1dcbdf541ce77",
            "subnet_id": "subnet-00d4b7c3a4411c021"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db_route",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aeff11c9ff75b66",
            "region": "us-east-1",
            "route_table_id": "rtb-0bac1dcbdf541ce77",
            "subnet_id": "subnet-0822afff993fef25a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db_route",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0261851dba0caa983",
            "region": "us-east-1",
            "route_table_id": "rtb-0612b14cd98766b94",
            "subnet_id": "subnet-0d52e1c2058dc4d6a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b8d8b211787686a",
            "region": "us-east-1",
            "route_table_id": "rtb-0612b14cd98766b94",
            "subnet_id": "subnet-0785f2334b1aa7ab4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026125b5a3b28bd89",
            "region": "us-east-1",
            "route_table_id": "rtb-0082dab3faea00a44",
            "subnet_id": "subnet-0a7a0a66ec10de906"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cdea5ffbfb231ed",
            "region": "us-east-1",
            "route_table_id": "rtb-0082dab3faea00a44",
            "subnet_id": "subnet-0009387bf3cb51f99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-00d4b7c3a4411c021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d4b7c3a4411c021",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-db-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-db-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0822afff993fef25a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0822afff993fef25a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-db-us-east-1b",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-db-us-east-1b",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0d52e1c2058dc4d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d52e1c2058dc4d6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-private-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-private-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0785f2334b1aa7ab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0785f2334b1aa7ab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-private-us-east-1b",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-private-us-east-1b",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0a7a0a66ec10de906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7a0a66ec10de906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-public-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-public-us-east-1a",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0009387bf3cb51f99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0009387bf3cb51f99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-public-us-east-1b",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV-public-us-east-1b",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:vpc/vpc-00b3511d793dc2fd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089eefb8cccaf58ef",
            "default_route_table_id": "rtb-0858a3e581aadfa07",
            "default_security_group_id": "sg-04d63d8131f755b30",
            "dhcp_options_id": "dopt-0220fad9fbb49c2c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b3511d793dc2fd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0858a3e581aadfa07",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0843c2431eff9f03a",
            "peer_owner_id": "285729811195",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-00b3511d793dc2fd3",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "Roboshop-DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0977ca86c1e50d5c7"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}